--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,17 @@ dependencies:
   cupertino_icons: ^1.0.2
   http:
   flutter_secure_storage:
+  firebase_database: ^10.0.9
   http_interceptor:
   email_validator:
   flutter_easyloading:
+  firebase_core: ^2.4.1
+  firebase_auth: ^4.2.5
+  cloud_firestore: ^4.3.1
+  get: ^4.6.5
   intl:
+  get_storage: ^2.1.1
+  json_annotation: ^4.8.1
 
 
 dev_dependencies:
